--- a/html/commodity.html
+++ b/html/commodity.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>商品列表</title>
+    <title>福利清单</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
