--- a/version-1/test.html
+++ b/version-1/test.html
@@ -73,6 +73,12 @@
     </div>
 </div>
 
+<div style="background-color: black;padding: 2rem;" >
+    <div  style="background-color: red;width: 100px;height: 100px;border-radius: 50%;">
+            <img src="../assets/images/bing-1.jpg" alt="" style="width: 100%;height: 100%;;">
+    </div>
+</div>
+
 </body>
 <script>
     $('#login').click(function () {
